--- a/layouts/about/section.html
+++ b/layouts/about/section.html
@@ -1,9 +1,24 @@
-{{ define "main" }}
-{{ partial "navbar" . }}
+{{ define "main" }} {{ partial "navbar" . }}
 
-<div class="container p-5">
-    <h1 class="font-weight-bold text-dark">About diesmo5</h1>
-    {{.Content}}
+<div class="container-fluid bg-yankees p-5">
+  <div class="container p-5">
+    <div class="bg-white p-5">
+      <h2 class="font-weight-normal">-- LETTER FROM THE CEO</h2>
+      <h1 class="text-rose font-weight-bold">DIESMO 5 blah blah</h1>
+      <h5 class="text-yankees font-weight-light py-4">
+        {{.Content}}
+      </h5>
+      <div class="row">
+        <div class="col-lg-3 col-md-4 col-4">
+          <img src="/img/events-square-promo.png" alt="" class="w-100" />
+        </div>
+        <div class="col-lg-3 col-md-4 col-4 my-auto">
+          <h6 class="text-dark font-weight-light">Dwight Diesmo</h6>
+          <h6 class="text-dark font-weight-light">Senior Partner</h6>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 {{ end }}
