--- a/layouts/hackathons/section.html
+++ b/layouts/hackathons/section.html
@@ -34,7 +34,7 @@
   <div class="container">
     <h4 class="font-weight-light text-white text-center pt-4">Hackathons</h4>
     <div class="row">
-      {{ range $.Site.Data.hackathons }}
+      {{ range $.Site.Data.collab.hackathons }}
       <a
         href="{{.url}}"
         target="_blank"
