--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -7,7 +7,7 @@
   <p class="">{{.Content}}</p>
 
   <div class="row">
-    {{range $.Site.Data.services}}
+    {{range $.Site.Data.store.services}}
     <div class="card border-0 col-lg-4 col-md-4 col-12">
       <img src="{{.img}}" alt="{{.alt}}" class="card-img" />
       <div class="card-body text-center">
