--- a/layouts/speaking-engagements/section.html
+++ b/layouts/speaking-engagements/section.html
@@ -36,7 +36,7 @@
       Speaking Engagements
     </h4>
     <div class="row">
-      {{ range $.Site.Data.speaking }}
+      {{ range $.Site.Data.collab.speaking }}
       <a
         href="{{.url}}"
         target="_blank"
