--- a/layouts/workshops/section.html
+++ b/layouts/workshops/section.html
@@ -33,7 +33,7 @@
   <div class="container">
     <h4 class="font-weight-light text-white text-center pt-4">Workshops</h4>
     <div class="row">
-      {{ range $.Site.Data.workshops }}
+      {{ range $.Site.Data.collab.workshops }}
       <a
         href="{{.url}}"
         target="_blank"
