--- a/layouts/collaborate/section.html
+++ b/layouts/collaborate/section.html
@@ -1,4 +1,4 @@
-{{ define "main" }} {{ partial "navbar" . }} {{range $.Site.Data.collaborate}}
+{{ define "main" }} {{ partial "navbar" . }} {{range $.Site.Data.collab.collaborate}}
 <div
   class="container-fluid m-auto py-5"
   style="background-image: url('{{.img}}'); background-size: cover; width: 100%; height: 100%;"
@@ -21,7 +21,7 @@
   <div class="container">
     <h4 class="font-weight-light text-white text-center pt-4">Hackathons</h4>
     <div class="row">
-      {{ range $.Site.Data.hackathons }}
+      {{ range $.Site.Data.collab.hackathons }}
       <a
         href="{{.url}}"
         target="_blank"
