--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,294 +1,65 @@
-{{ define "main" }}
-{{ partial "navbar" . }}
-
-<!-- <div class="container py-5">
-  <div class="text-center py-5">
-    <img src="/img/logo/icon.png" class="w-50" alt="" />
-    <h1 class="">diesmo<i>5</i></h1>
-  </div> -->
-  <!-- <h1 class="text-center">Our Website is being Rennovated</h1> -->
-<!-- 
-  {{ range $.Site.Data.temp }}
-  <div class="text-center py-5">
-    <h3 class="font-weight-bold">{{.title}}</h3>
-    <h5 class="">
-      {{.description}}
-    </h5>
-    <p class="">
-      {{.line}}
-    </p>
-  </div>
-  {{ end }}
-</div> -->
-
-<!-- <div class="container">
-  <div class="row pb-3">
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <ol class="carousel-indicators">
-        <li
-          data-target="#carouselExampleIndicators"
-          data-slide-to="0"
-          class="active"
-        ></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <a href="" class="text-decoration-none">
-            <img
-              src="/img/c-how-to-program-course-promo.png"
-              class="d-block w-100"
-              alt="C How To Program Course Promo"
-            />
-          </a>
-        </div>
-        <div class="carousel-item">
-          <a href="" class="text-decoration-none">
-            <img
-              src="/img/youtube-promo.png"
-              class="d-block w-100"
-              alt="SudoCore Web Framework Promo"
-            />
-          </a>
-        </div>
-        <div class="carousel-item">
-          <a href="" class="text-decoration-none">
-            <img
-              src="/img/sudocore-promo.png"
-              class="d-block w-100"
-              alt="SudoCore Web Framework Promo"
-            />
-          </a>
-        </div>
-      </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-    
-
-  <div class="row py-5">
-    <div class="card-deck">
-      <div class="card border-0">
-        <a href="https://masterclass.diesmo5.com" class="">
-          <img
-            src="/img/masterclass-square-promo.png"
-            class="card-img-top"
-            alt="..."
-          />
-        </a>
-        <div class="card-body">
-          <a
-            href="https://masterclass.diesmo5.com"
-            class="text-decoration-none text-dark"
-          >
-            <h5 class="card-title">MasterClass</h5>
-            <p class="card-text">
-              Get hundreds of hours content for $12.
-            </p>
-          </a>
-          <a href="https://masterclass.diesmo5.com" class="text-small"
-            >Start a Course ></a
-          >
-        </div>
-      </div>
-      <div class="card border-0">
-        <a href="https://masterclass.diesmo5.com" class="">
-          <img
-            src="/img/sudocore-square-promo.png"
-            class="card-img-top"
-            alt="..."
-          />
-        </a>
-        <div class="card-body">
-          <a
-            href="https://masterclass.diesmo5.com"
-            class="text-decoration-none text-dark"
-          >
-            <h5 class="card-title">Sudocore</h5>
-            <p class="card-text">
-              Build your next website faster than ever.
-            </p>
-          </a>
-          <a href="https://masterclass.diesmo5.com" class="text-small">Get Started ></a>
-        </div>
-      </div>
-      <div class="card border-0">
-        <a href="https://masterclass.diesmo5.com" class="">
-          <img
-            src="/img/edux-square-promo.png"
-            class="card-img-top"
-            alt="..."
-          />
-        </a>
-        <div class="card-body">
-          <a
-            href="https://masterclass.diesmo5.com"
-            class="text-decoration-none text-dark"
-          >
-            <h5 class="card-title">EduFriend</h5>
-            <p class="card-text">
-              Simple way to manage your student life.
-            </p>
-          </a>
-          <a href="https://masterclass.diesmo5.com" class="text-small">App Store ></a>
-        </div>
-      </div>
-      <div class="card border-0">
-        <a href="https://masterclass.diesmo5.com" class="">
-          <img
-            src="/img/newsletter-square-promo.png"
-            class="card-img-top"
-            alt="..."
-          />
-        </a>
-        <div class="card-body">
-          <a
-            href="https://masterclass.diesmo5.com"
-            class="text-decoration-none text-dark"
-          >
-            <h5 class="card-title">Keep up with diesmo5</h5>
-            <p class="card-text">
-              Take part in our journey.
-            </p>
-          </a>
-          <a href="https://masterclass.diesmo5.com" class="text-small"
-            >Join the Community ></a
-          >
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row bg-dark p-2">
-    <a href="" class="text-decoration-none">
-      <img src="/img/youtube-promo2.png" alt="" class="w-100" />
-    </a>
-  </div>
-
-  <div class="row">
-    <h4 class="font-weight-bold"></h4>
-    <div class="card-deck">
-      <div class="card border-0">
-        <img
-          src="/img/hackathon-square-promo.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Hackathons</h5>
-          <p class="card-text">
-            Take part in our journey.
-          </p>
-          <a href="" class="text-small">Learn More ></a>
-        </div>
-      </div>
-      <div class="card border-0">
-        <img
-          src="/img/events-square-promo.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">Events</h5>
-          <p class="card-text">
-            Take part in our journey.
-          </p>
-          <a href="" class="text-small">Learn More ></a>
-        </div>
-      </div>
-      <div class="card border-0">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Education</h5>
-          <p class="card-text">
-            Take part in our journey.
-          </p>
-          <a href="" class="text-small">Learn More ></a>
-        </div>
-      </div>
-      <div class="card border-0">
-        <img
-          src="/img/youtube-square-promo.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <h5 class="card-title">YouTube</h5>
-          <p class="card-text">
-            Take part in our journey.
-          </p>
-          <a href="" class="text-small">Learn More ></a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+{{ define "main" }} {{ partial "navbar" . }}
+<div class="">
   <div
-    id="carouselExampleIndicators"
-    class="carousel slide"
+    id="HomePageCarousel"
+    class="carousel slide carousel-fade"
     data-ride="carousel"
   >
-    <ol class="carousel-indicators">
-      <li
-        data-target="#carouselExampleIndicators"
-        data-slide-to="0"
-        class="active"
-      ></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="..." />
+      {{range $.Site.Data.home.carousel}}
+      <div class="carousel-item {{.toggle}}">
+        <img src="{{.img}}" class="d-block w-100" alt="{{.alt}}" />
       </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="..." />
+      {{end}}
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-yankees text-white text-center py-5">
+  <div class="container py-5">
+    <h1 class="font-weight-bold">We are a Brand Design Strategy Agency</h1>
+    <h4 class="font-weight-light pt-2 pb-4">
+      We help businesses grow, launch products, and build enduring relationships
+      with their communities.
+    </h4>
+    <a href="" class="btn btn-lg btn-rose rounded-0 font-weight-light px-5 py-3"
+      >SEE OUR WORK</a
+    >
+  </div>
+</div>
+
+<div class="container py-5">
+  <div class="row">
+    {{range $.Site.Data.home.cards}}
+    <div class="card col-lg-3 col-md-3 col-12 border-0">
+      <a href="{{.url}}" class="">
+        <img src="{{.img}}" class="card-img-top" alt="{{.alt}}" />
+      </a>
+      <div class="card-body">
+        <a href="{{.url}}" class="text-decoration-none text-dark">
+          <h5 class="card-title">{{.title}}</h5>
+          <p class="card-text">
+            {{.description}}
+          </p>
+        </a>
+        <a href="{{.url}}" class="text-small">{{.tagline}} ></a>
       </div>
     </div>
-    <a
-      class="carousel-control-prev"
-      href="#carouselExampleIndicators"
-      role="button"
-      data-slide="prev"
-    >
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a
-      class="carousel-control-next"
-      href="#carouselExampleIndicators"
-      role="button"
-      data-slide="next"
-    >
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    {{end}}
   </div>
-</div> -->
-{{ end }}
+</div>
+
+{{ partial "clients" . }}
+
+<div class="container-fluid text-center pb-5">
+  <div class="container pb-5">
+    <h4 class="font-weight-light">Ready to Talk?</h4>
+    <a
+      href="/contact/"
+      class="btn btn-lg btn-rose rounded-0 font-weight-light px-5 py-3"
+      >Start a Project</a
+    >
+  </div>
+</div>
+
+{{end}}
