--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -1,10 +1,10 @@
 <div class="container py-5">
-  <h1 class="text-center text-yankees font-weight-bold">Partners</h1>
+  <h1 class="text-center text-yankees font-weight-bold">Clients</h1>
   <div class="row py-5">
-    {{range $.Site.Data.collab.partners}}
+    {{range $.Site.Data.store.clients}}
     <div class="card border-0 col-lg-3 col-md-4 col-6 m-auto">
       <a href="{{.url}}" target="_blank" class="">
-        <img src="{{.img}}" alt="" class="card-img" />
+        <img src="{{.img}}" alt="" class="grayscale card-img" />
       </a>
     </div>
     {{end}}
