--- a/layouts/pro-group/section.html
+++ b/layouts/pro-group/section.html
@@ -1,16 +1,16 @@
 {{ define "main" }}
 {{ partial "navbar" . }}
 
-<div class="container-fluid" id="membershipsheader">
-  <div class="container text-white text-center">
-    <h1 class="font-weight-bold">The diesmo5 Pro Group</h1>
+<div class="container-fluid py-5" style="background-image: url('https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2000&q=60');">
+  <div class="container text-white text-center py-5">
+    <h1 class="font-weight-bold">The DIESMO 5 Pro Group</h1>
     <h3 class="font-weight-normal py-3">
-      Get weekly face time with diesmo5 and join an exclusive community of
+      Get weekly face time with DIESMO 5 and join an exclusive community of
       creative entrepreneurs.
     </h3>
     <a
       href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
-      class="btn btn-lg btn-primary px-5"
+      class="btn btn-lg btn-rose rounded-0 px-5"
       >Get Started</a
     >
   </div>
@@ -24,7 +24,7 @@
     Looking for your people? We know where to find them.
   </h4>
   <h5 class="font-weight-light py-4">
-    The Futur Pro group is an exclusive and thriving community of creative
+    The DIESMO 5 Pro group is an exclusive and thriving community of creative
     entrepreneurs sharing their daily challenges and finding real solutions from
     their peers and from us.
     <br /><br />
@@ -36,9 +36,9 @@
 </div>
 
 <div class="container py-5">
-  <h2 class="font-ewight-bold">Weekly face time with The Futur.</h2>
+  <h2 class="font-ewight-bold">Weekly face time with The DIESMO 5.</h2>
   <h5 class="font-weight-light">
-    As a member of The Futur Pro Group, you’ll get access to our weekly video
+    As a member of The DIESMO 5 Pro Group, you’ll get access to our weekly video
     calls where you can ask any of us (including Chris Do) questions, and get
     them answered right then and there.
     <br /><br />
@@ -46,12 +46,12 @@
     previous Pro Group video calls covering topics like strategy, pricing,
     sales, marketing, project management and a whole lot more.
     <br /><br />
-    These calls and recordings are exclusive to The Futur Pro Group—you won’t
+    These calls and recordings are exclusive to The DIESMO 5 Pro Group—you won’t
     get them anywhere else.
   </h5>
 </div>
 
-<div class="container-fluid bg-dark text-white py-5">
+<div class="container-fluid bg-yankees text-white py-5">
   <div class="container">
     <h1 class="font-weight-bold py-5">What you get:</h1>
     {{ range.Pages }}
@@ -69,11 +69,11 @@
 <div class="container py-5">
   <div class="text-center py-5">
     <h1 class="font-weight-bold pb-4">
-      Why do people join The Futur Pro Group?
+      Why do people join The DIESMO 5 Pro Group?
     </h1>
     <a
       href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
-      class="btn btn-lg btn-primary px-5"
+      class="btn btn-lg btn-rose rounded-0 px-5"
       >Get Started</a
     >
   </div>
@@ -127,7 +127,7 @@
   </h5>
   <a
     href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
-    class="text-decoration-none"
+    class="text-decoration-none text-rose"
   >
     <div class="card text-left p-4">
       <h5 class="font-weight-bold">Monthly</h5>
@@ -136,7 +136,7 @@
   </a>
   <a
     href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
-    class="text-decoration-none"
+    class="text-decoration-none text-rose"
   >
     <div class="card text-left p-4">
       <h5 class="font-weight-bold">Annual</h5>
@@ -146,7 +146,7 @@
   <div class="py-3"></div>
   <a
     href="https://checkout.square.site/buy/C74CIKNTF7UOTT6TGZF6ZFJM"
-    class="btn btn-lg btn-primary px-5"
+    class="btn btn-lg btn-rose rounded-0 px-5"
     >Get Started</a
   >
 </div>
