--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,10 @@
-{{ define "main" }}
+{{ define "main" }} {{partial "navbar" . }}
 
-<div class="container">
+<div class="container py-5">
+  <div class="row py-5">
     <h1 class="text-center">
-        404: Page Not Found
+      404: Page Not Found
     </h1>
+  </div>
 </div>
 {{ end }}
