--- a/layouts/about/section.html
+++ b/layouts/about/section.html
@@ -1,18 +1,18 @@
 {{ define "main" }} {{ partial "navbar" . }}
 
 <div class="container-fluid bg-yankees p-5">
-  <div class="container p-5">
+  <div class="container">
     <div class="bg-white p-5">
       <h2 class="font-weight-normal">-- LETTER FROM THE CEO</h2>
-      <h1 class="text-rose font-weight-bold">DIESMO 5 blah blah</h1>
-      <h5 class="text-yankees font-weight-light py-4">
+      <h1 class="text-rose font-weight-bold">DIESMO 5 </h1>
+      <p class="text-yankees font-weight-light py-4">
         {{.Content}}
-      </h5>
-      <div class="row">
-        <div class="col-lg-3 col-md-4 col-4">
+      </p>
+      <div class="row py-3">
+        <div class="col-lg-3 col-md-4 col-12">
           <img src="/img/events-square-promo.png" alt="" class="w-100" />
         </div>
-        <div class="col-lg-3 col-md-4 col-4 my-auto">
+        <div class="col-lg-3 col-md-4 col-12 my-auto">
           <h6 class="text-dark font-weight-light">Dwight Diesmo</h6>
           <h6 class="text-dark font-weight-light">Senior Partner</h6>
         </div>
