--- a/layouts/contact/section.html
+++ b/layouts/contact/section.html
@@ -44,7 +44,7 @@
           name="message"
         ></textarea>
       </p>
-      <button class="btn btn-primary px-5" type="submit">Send</button>
+      <button class="btn btn-lg btn-rose rounded-0 px-5" type="submit">Send</button>
     </form>
   </div>
 </div>
