--- a/layouts/press/list.html
+++ b/layouts/press/list.html
@@ -11,7 +11,7 @@
         <h4 class="font-weight-bold">{{.Title}}</h4>
         <small class="">Date: {{.Date.Format "Jan 2, 2006"}}</small>
         <h6 class="font-weight-normal">{{.Description}}</h6>
-        <a href="{{.URL}}" class="">Read More ></a>
+        <a href="{{.URL}}" class="text-rose text-decoration-none">Read More ></a>
     </a>
       </div>
     </div>
