--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@
 .text-yankees {
   color: #1a1c3a;
 }
-.text-yankees:hover {
+a.text-yankees:hover {
   color: #1a1c3a;
 }
 .text-indigo {
@@ -141,4 +141,9 @@
   background-color: #ffffff;
   color:#f40c84;
   transition-duration: 0.8s;
+}
+
+.header-img {
+  min-height: 100vh;
+  min-width: 100vw;
 }
