contact and web services

--- a/layouts/about/section.html
+++ b/layouts/about/section.html
@@ -1,8 +1,8 @@
 {{ define "main" }} {{ partial "navbar" . }}
 
-<div class="container-fluid bg-yankees p-5">
-  <div class="container">
-    <div class="bg-white p-5">
+<div class="container-fluid bg-yankees py-5">
+  <div class="card p-5">
+    <div class="bg-white">
       <h2 class="font-weight-normal">-- LETTER FROM THE CEO</h2>
       <h1 class="text-rose font-weight-bold">DIESMO 5 </h1>
       <p class="text-yankees font-weight-light py-4">
@@ -10,11 +10,11 @@
       </p>
       <div class="row py-3">
         <div class="col-lg-3 col-md-4 col-12">
-          <img src="/img/events-square-promo.png" alt="" class="w-100" />
+          <img src="/img/dwight-diesmo.jpg" alt="" style="border-radius: 50%;" class="w-100" />
         </div>
         <div class="col-lg-3 col-md-4 col-12 my-auto">
-          <h6 class="text-dark font-weight-light">Dwight Diesmo</h6>
-          <h6 class="text-dark font-weight-light">Senior Partner</h6>
+          <h3 class="text-dark font-weight-light">Dwight Diesmo</h3>
+          <h3 class="text-dark font-weight-light">CEO</h3>
         </div>
       </div>
     </div>
