--- a/layouts/contact/section.html
+++ b/layouts/contact/section.html
@@ -29,14 +29,25 @@
         />
       </p>
       <p>
-        <input
+        <!-- <input
           class="p-2 btn-block"
           placeholder="Subject"
           type="text"
           name="subject"
-        />
+        /> -->
+        <div class="form-group">
+            <select class="form-control btn-block p-2" type="text" name="subject">
+              <option value="null">Subject</option>
+              <option value="Web Services">Web Services</option>
+              <option value="Brand Design Services">Brand Design Services</option>
+              <option value="Comsulting Services">Consulting Services</option>
+              <option value="Organize a Hackathon">Organize a Hackathon</option>
+              <option value="Organize a Workshop">Organize a Workshop</option>
+              <option value="Organize a Speaking Engagement">Organize a Speaking Engagement</option>
+              <option value="General Inquiries">Organize a Speaking Engagement</option>
+            </select>
+          </div>
       </p>
-
       <p>
         <textarea
           class="p-2 btn-block"
