--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="">
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="/">
       <img src="/img/logo/diesmo5-logo.png" width="110px" alt="diesmo5-logo" />
@@ -22,47 +22,27 @@
         <a class="nav-item nav-link" href="/">Home</a>
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdownMenuLink"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
           >
-            Products & Services
-          </a>
-          <div
-            class="dropdown-menu border-0"
-            aria-labelledby="navbarDropdownMenuLink"
-          >
-            {{ range $.Site.Data.nav.store}}
-            <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
-            {{end}}
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdownMenuLink"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            Work
-          </a>
-          <div
-            class="dropdown-menu border-0"
-            aria-labelledby="navbarDropdownMenuLink"
-          >
-            {{ range $.Site.Data.nav.work}}
-            <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
-            {{end}}
-          </div>
-        </li>
-        <li class="nav-item dropdown">
+          Products & Services
+        </a>
+        <div
+        class="dropdown-menu border-0"
+        aria-labelledby="navbarDropdownMenuLink"
+        >
+        {{ range $.Site.Data.nav.store}}
+        <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
+        {{end}}
+      </div>
+    </li>
+    <a class="nav-item nav-link" href="/">Work</a>
+    <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
