--- a/layouts/services/single.html
+++ b/layouts/services/single.html
@@ -32,9 +32,33 @@
 
 <section class="container">
   <p class="">{{.Content}}</p>
+  <section class="py-5">
+    <div class="row py-5">
+      <div class="col-lg-6 col-md-6 col-12 m-auto">
+        <h3 class="font-weight-bold">
+          How can I hire DIESMO 5?
+        </h3>
+      </div>
+      <div class="col-lg-6 col-md-6 col-12 m-auto">
+        <h5 class="font-weight-light">
+          We are open and understanding to every client that we come across.
+          What helps us the most is contacting us via email (use the button
+          below) and let us know a little bit about your business as well as the
+          problem you are trying to solve. This gives us context and helps us
+          better prepare for that first meeting allowing us to help you and your
+          business to the best of our ability. As for our rate, we vary based on
+          the scope of the project. This includes features, complexity, size of
+          the website, duration of the project, and the company's status. We
+          generally charge less for non-profit or student organizations.
+        </h5>
+      </div>
+    </div>
+  </section>
+
+  <hr />
 </section>
 
-<div class="container-fluid text-center py-5">
+<div class="container-fluid text-center pb-5">
   <div class="container py-5">
     <h4 class="font-weight-light">Ready to Talk?</h4>
     <a
