--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center py-5">
+<div class="container-fluid text-center pb-5">
   <div class="container py-5">
     <h4 class="font-weight-light">Ready to Talk?</h4>
     <a
