--- a/layouts/hackathons/section.html
+++ b/layouts/hackathons/section.html
@@ -1,7 +1,7 @@
 {{define "main"}} {{ partial "navbar" . }}
 
 <div class="">
-  <img src="{{.Params.img}}" alt="{{.Params.Alt}}" class="header-img" />
+  <img src="{{.Params.img}}" alt="{{.Params.Alt}}" class="w-100" />
 </div>
 
 <div class="container py-5">
