--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
-<div class="">
+<section class="">
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="/">
-      <img src="/img/logo/diesmo5-logo.png" width="110px" alt="diesmo5-logo" />
+      <img src="/img/logo/icon.png" width="70px" alt="diesmo5-logo" />
     </a>
     <button
       class="navbar-toggler border-0"
@@ -20,29 +20,33 @@
     >
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/">Home</a>
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdownMenuLink"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownMenuLink"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
           >
-          Products & Services
-        </a>
-        <div
-        class="dropdown-menu border-0"
-        aria-labelledby="navbarDropdownMenuLink"
+            Products & Services
+          </a>
+          <div
+            class="dropdown-menu border-0"
+            aria-labelledby="navbarDropdownMenuLink"
+          >
+            {{ range $.Site.Data.nav.store}}
+            <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
+            {{end}}
+          </div>
+        </li> -->
+        <a class="nav-item nav-link" href="/products-services/"
+          >Products & Services</a
         >
-        {{ range $.Site.Data.nav.store}}
-        <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
-        {{end}}
-      </div>
-    </li>
-    <a class="nav-item nav-link" href="/">Work</a>
-    <li class="nav-item dropdown">
+        <a class="nav-item nav-link" href="/case-studies/">Case Studies</a>
+        <a class="nav-item nav-link" href="/collaborate/">Collaborate</a>
+        <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -62,7 +66,7 @@
             <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
             {{end}}
           </div>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -108,4 +112,4 @@
       </div>
     </div>
   </nav>
-</div>
+</section>
