--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }} {{ partial "navbar" . }}
 
 <div class="container py-5">
-  <h1 class="font-weight-bold text-center text-dark display-1">
+  <h1 class="font-weight-bold text-center text-yankees display-1">
     {{.Title}}
   </h1>
   <p class="">{{.Content}}</p>
@@ -29,9 +29,11 @@
   {{end}}
 </section>
 
+<hr class="container">
+
 {{ partial "clients" . }}
 
-<div class="container-fluid text-center py-5">
+<div class="container-fluid text-center pb-5">
   <div class="container py-5">
     <h5 class="font-weight-light">Ready to Talk?</h5>
     <a
