--- a/layouts/services/single.html
+++ b/layouts/services/single.html
@@ -1,16 +1,16 @@
 {{ define "main" }} {{ partial "navbar" . }}
 
 <div class="" style="">
-  <img src="{{.Params.img}}" alt="{{.Params.Alt}}" class="header-img" />
+  <img src="{{.Params.img}}" alt="{{.Params.Alt}}" class="w-100" />
 </div>
 
 <section class="container">
-  <h1 class="text-yankees font-weight-bold text-center pt-5 pb-2">
+  <h1 class="text-dark font-weight-bold text-center pt-5 pb-2">
     {{.Title}}
   </h1>
-  <h2 class="text-dark text-center pb-5">
+  <h3 class="text-secondary text-center pb-5">
     {{.Description}}
-  </h2>
+  </h3>
 </section>
 
 <section class="container py-5">
@@ -23,7 +23,7 @@
     </div>
     <div class="col-lg-3 col-md-3 col-12 py-5">
       <h6 class="text-dark">SCOPE OF PROJECT</h6>
-      <h6 class="font-weight-light text-dark">{{.Params.keywords}}</h6>
+      <h6 class="font-weight-light text-secondary">{{.Params.keywords}}</h6>
     </div>
   </div>
 </section>
