--- a/layouts/workshops/section.html
+++ b/layouts/workshops/section.html
@@ -1,6 +1,6 @@
 {{define "main"}} {{ partial "navbar" . }}
 <div class="">
-  <img src="{{.Params.img}}" alt="{{.Params.Alt}}" class="header-img" />
+  <img src="{{.Params.img}}" alt="{{.Params.Alt}}" class="w-100" />
 </div>
 
 <div class="container py-5">
