media page complete

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -42,10 +42,11 @@
           </div>
         </li> -->
         <a class="nav-item nav-link" href="/products-services/"
-          >Products & Services</a
+          >Store</a
         >
-        <a class="nav-item nav-link" href="/case-studies/">Case Studies</a>
+        <a class="nav-item nav-link" href="/case-studies/">Work</a>
         <a class="nav-item nav-link" href="/collaborate/">Collaborate</a>
+        <a class="nav-item nav-link" href="/media/">Media</a>
         <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -67,7 +68,7 @@
             {{end}}
           </div>
         </li> -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -87,7 +88,7 @@
             <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
             {{end}}
           </div>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
