--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -7,7 +7,9 @@
         <h6 class="font-weight-light text-small">Overview</h6>
       </div>
       <div class="col-lg-8 col-md-8 col-12 py-5">
-        <h1 class="font-weight-normal">Make the Most of What we have to Offer</h1>
+        <h1 class="font-weight-normal">
+          Make the Most of What we have to Offer
+        </h1>
         <h1 class="font-weight-light pt-4">Overview Description</h1>
       </div>
     </div>
@@ -16,11 +18,12 @@
 
 {{ range $.Site.Data.nav.media }}
 <section
-  class="bg-{{.color}} text-white py-5"
+  class="bg-{{.color}} text-white py-5 hidden-sm-down"
   style="background-image: url('{{.img}}'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;"
   id="{{.id}}"
 >
   <div class="container py-5">
+    <div class="row py-5"></div>
     <div class="row py-5">
       <div class="col-lg-4 col-md-4 col-12 py-5">
         <h6 class="font-weight-light text-small">{{.id}}</h6>
@@ -33,6 +36,29 @@
         >
       </div>
     </div>
+    <div class="row py-5"></div>
+  </div>
+</section>
+<section
+  class="bg-{{.color}} text-white py-5 hidden-sm-up"
+  style="background-image: url('{{.img}}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+  id="{{.id}}"
+>
+  <div class="container py-5">
+    <div class="row py-5"></div>
+    <div class="row py-5">
+      <div class="col-lg-4 col-md-4 col-12 py-5">
+        <h6 class="font-weight-light text-small">{{.id}}</h6>
+      </div>
+      <div class="col-lg-8 col-md-8 col-12 py-5">
+        <h1 class="font-weight-light display-1">{{.title}}</h1>
+        <h1 class="font-weight-light py-4">{{.description}}</h1>
+        <a href="{{.url}}" class="btn btn-lg btn-{{.color}} rounded-0 px-5 py-3"
+          >{{.action}}</a
+        >
+      </div>
+    </div>
+    <div class="row py-5"></div>
   </div>
 </section>
 {{ end }} {{ end }}
