--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -3,7 +3,7 @@
 {{ range $.Site.Data.blog.featured}}
 <section
   class="container-fluid m-auto"
-  style="background-image: url({{.img}}); background-position: center center; background-repeat: no-repeat; background-attachment: fixed; background-size: cover; min-height: 100vh;"
+  style="background-image: url({{.img}}); background-position: center center; background-repeat: no-repeat; background-size: cover; min-height: 100vh;"
 >
   <div class="text-white m-auto" style="position: absolute; top: 15rem;">
     <div class="col-lg-4 col-md-4 col-12"></div>
