--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -47,6 +47,7 @@
         <a class="nav-item nav-link" href="/case-studies/">Work</a>
         <a class="nav-item nav-link" href="/collaborate/">Collaborate</a>
         <a class="nav-item nav-link" href="/media/">Media</a>
+        <a class="nav-item nav-link" href="/about/">Company</a>
         <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -89,7 +90,7 @@
             {{end}}
           </div>
         </li> -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -109,7 +110,7 @@
             <a class="dropdown-item" href="{{.url}}">{{.title}}</a>
             {{end}}
           </div>
-        </li>
+        </li> -->
       </div>
     </div>
   </nav>
