--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -47,7 +47,7 @@
         <a class="nav-item nav-link" href="/case-studies/">Work</a>
         <a class="nav-item nav-link" href="/collaborate/">Collaborate</a>
         <a class="nav-item nav-link" href="/media/">Media</a>
-        <a class="nav-item nav-link" href="/about/">Company</a>
+        <!-- <a class="nav-item nav-link" href="/about/">Company</a> -->
         <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
