--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NQWHZ3H");
+    </script>
+    <!-- End Google Tag Manager -->
     <link
       rel="shortcut icon"
-      href="../../img/logo/icon.png"
+      href="../../img/logo/favicon.jpg"
       type="image/x-icon"
     />
     <title>{{ if .Title }} {{ .Title }} | {{ end }} DIESMO 5</title>
@@ -25,11 +39,19 @@
     />
   </head>
   <body class="text-century">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NQWHZ3H"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="text-yankees">
-      {{ block "main" . }}
-      {{ end }}
+      {{ block "main" . }} {{ end }}
     </div>
-    {{ partial "footer" . }}
-    {{ partial "scriptcode" . }}
+    {{ partial "footer" . }} {{ partial "scriptcode" . }}
   </body>
 </html>
