--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="shortcut icon"
-      href="../../img/logo/favicon.jpg"
+      href="../../img/logo/favicon.png"
       type="image/x-icon"
     />
     <title>{{ if .Title }} {{ .Title }} | {{ end }} DIESMO 5</title>
